<resources>
    <string name="app_name">PayApp</string>

    <!-- login screen -->
    <string name="login_text">PayApp</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Don\'t have an account? Create one</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="google_button_text">Sign in with Google</string>

    <!-- Sign up screen -->
    <string name="sign_up_text">Sign up</string>
    <string name="name_hint">Full Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="password_length_exceeded">The password should have at least 8 characters</string>
    <string name="reset_password">Reset Password</string>

    <string name="facebook_app_id">293056337701704</string>

    <!-- Firebase -->
    <string name="firebase_client_id" translatable="false">374404750020-jiadppdnvnf1h64turr58at3pv82rdd7.apps.googleusercontent.com</string>
    <string name="no_name_entered">Please enter a name</string>
    <string name="invalid_email">Invalid Email</string>

    <string name="search_hint">Search</string>
    <string name="paid_me_back">Paid me back</string>
    <string name="lend_more">Lend more</string>
    <string name="pay_back">Pay Back</string>
    <string name="borrow_more">Borrow more</string>
    <string name="lend">Lend</string>
    <string name="borrow">Borrow</string>
    <string name="default_number">0.00</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_transaction">Add</string>
    <string name="description">Description (optional)</string>
    <string name="you_owe">you owe</string>
    <string name="owes_you">owes you</string>
    <string name="settings">Settings</string>
    <string name="you_paid">You paid</string>
    <string name="paid_you">paid you</string>
    <string name="OK">OK</string>
    <string name="no_debts">Looks like you don\'t have any debts.\nAdd a transaction using the + button</string>
    <string name="validate_all">Validate All</string>

</resources>
